<resources>

    <string name="app_name">EnhancedCPDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_download">EnhancedCPDemo</string>
    <string name="runDownloadFile">runDownloadFile</string>
    <string name="runCursorLoader">runCursorLoader</string>
    <string name="runAsyncQueryHandler">runAsyncQueryHandler</string>
    <string name="runSync">runSync</string>
    <string name="resetImage">resetImage</string>
    <string name="btn_downloadFile">Download File</string>
    <string name="btn_cursorLoader">Display via CursorLoader</string>
    <string name="btn_asyncQueryHandler">Delete via AsyncQueryHandler</string>
    <string name="btn_sync">Setup Sync Connection</string>
    <string name="btn_resetImage">Reset Image</string>
    <string name="url">Enter URL</string>
    <string name="png">http://www.dre.vanderbilt.edu/~schmidt/cs282/lab2/</string>
    <string name="ImageDiscription">Default Image</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string name="notification_login_error">Touch to sign into your Sample SyncAdapter account.</string>

    <!-- Title string for Login activity -->
    <string name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>

    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string name="cancel_button_label">Cancel</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>

</resources>